refactor: Go command