@@ -2,6 +2,7 @@ package com.forensys.core.command.concrete;
 
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Optional;
 
 import com.forensys.common.ApplicationContext;
 import com.forensys.core.command.CommandExitCode;
@@ -15,7 +16,8 @@ import com.forensys.core.filestructure.concrete.Directory;
 public class GoCommand extends TerminalCommand {
 
     public GoCommand() {
-        super(new CommandMetadata("go", "Changes the current directory", "hint: you can use back, if you want to go back"));
+        super(new CommandMetadata("go", "Changes the current directory",
+                "hint: you can use back, if you want to go back"));
     }
 
     // TODO: Needs refactoring...
@@ -23,29 +25,62 @@ public class GoCommand extends TerminalCommand {
     public CommandOutput run(List<String> args) {
         ApplicationContext context = ApplicationContext.getInstance();
         CommandOutputBuilder outputBuilder = new CommandOutputBuilder();
-        List<FileSystemEntry> children = context.getCurrentDirectory().getChildren();
 
-        if (args.size() > 1) {
-            return outputBuilder.text("Too many arguments passed for command go").exitCode(CommandExitCode.FAILURE).build();
+        if (!validateArgs(args, outputBuilder)) {
+            return outputBuilder.build();
         }
 
-        if (args.getFirst().equals("back")) {
+        String target = args.get(0);
+
+        if ("back".equals(target)) {
             try {
                 context.restore();
-                outputBuilder.text("Back to parent directory").exitCode(CommandExitCode.SUCESS).build();
+                outputBuilder
+                        .text("Back to directory " + context.getCurrentDirectory().getMetadata().getName())
+                        .exitCode(CommandExitCode.SUCESS);
             } catch (NoSuchElementException e) {
-                return outputBuilder.text("No parent directory to go back to").exitCode(CommandExitCode.FAILURE).build();
+                outputBuilder
+                        .text("No parent directory to go back")
+                        .exitCode(CommandExitCode.FAILURE);
             }
+            return outputBuilder.build();
+        }
+
+        Optional<FileSystemEntry> entry = context.getCurrentDirectory()
+                .getChildren()
+                .stream()
+                .filter(obj -> obj.getMetadata().getName().equals(target))
+                .findFirst();
+
+        if (entry.isEmpty() || !(entry.get() instanceof Directory directory)) {
+            outputBuilder
+                    .text("Directory not found, please choose a valid directory")
+                    .exitCode(CommandExitCode.FAILURE);
         } else {
-            FileSystemEntry fileSystemEntry = children.stream().filter(obj -> obj.getMetadata().getName().equals(args.getFirst())).findFirst().orElse(null);
-            if (!(fileSystemEntry instanceof Directory)) {
-                return outputBuilder.text("Cannot go there, please choose a directory to go").exitCode(CommandExitCode.FAILURE).build();
-            }
-            context.setCurrentDirectory((Directory) fileSystemEntry);
-            outputBuilder.text("Changed dir to " + args.getFirst()).exitCode(CommandExitCode.SUCESS);
+            context.setCurrentDirectory(directory);
+            outputBuilder
+                    .text("Current location whas changed to  " + target)
+                    .exitCode(CommandExitCode.SUCESS);
         }
 
         return outputBuilder.build();
     }
 
+    private boolean validateArgs(List<String> args, CommandOutputBuilder outputBuilder) {
+        if (args.isEmpty()) {
+            outputBuilder
+                    .text("No arguments passed, command requires a argument")
+                    .exitCode(CommandExitCode.FAILURE);
+            return false;
+        }
+
+        if (args.size() > 1) {
+            outputBuilder
+                    .text("Too many arguments passed for command go")
+                    .exitCode(CommandExitCode.FAILURE);
+            return false;
+        }
+
+        return true;
+    }
 }
